[package]
name = "ozy_engine"
version = "0.1.0"
authors = ["Nick Driscoll <nick.a.mavros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "*"
gl = "*"
image = "*"
nalgebra-glm = "*"
glyph_brush = "*"